[WGSL] frag_depth on return value does not generate depth(any) attribution https://bugs.webkit.org/show_bug.cgi?id=263393 rdar://117221582

Reviewed by Mike Wyrzykowski.

Add support for returning builtins from fragment shaders. In order to generate
valid metal code, we need to wrap the return type in a struct, since it's not
valid to add the attributes directly to the return type.

* Source/WebGPU/WGSL/AST/ASTStructure.h:
* Source/WebGPU/WGSL/EntryPointRewriter.cpp:
(WGSL::EntryPointRewriter::checkReturnType):
* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::visit):
* Source/WebGPU/WGSL/tests/valid/fragment-output.wgsl:

Canonical link: https://commits.webkit.org/269950@main